# from-java-to-agent

./: .gitignore  CLAUDE.md  LICENSE  README.md  learning-plan.md  mcp_code_review.py  mcp_learning_review.py
journal/week-01/: day-01.md  day-02.md  day-03.md  day-04.md  day-05.md  retrospective.md
journal/week-02/: day-06.md  day-07.md  day-08.md  day-09.md  day-10.md  retrospective.md
journal/week-03/: day-11.md  day-12.md  day-13.md  day-14.md  day-15.md  retrospective.md
journal/week-04/: day-16.md  day-17.md  day-18.md  day-19.md
notes/: agent-evaluation.md  code-sandbox.md  embeddings-and-vector-db.md  enterprise-rag-auth.md  harness-fundamentals.md  llm-fundamentals.md  prompt-engineering.md  python-for-java-devs.md  tool-calling-and-mcp.md  面试题-Agent基础.md
notes/week-01/: python-for-java-devs.md
notes/week-02/: deep-dive-01-tool-calling-strategy.md  deep-dive-02-langgraph-vs-bpmn.md  deep-dive-03-mcp-transport.md  deep-dive-04-agent-state-persistence.md  deep-dive-05-fastapi-agent-service.md  deep-dive-06-agent-security-three-layers.md  deep-dive-07-a2a-protocol-overview.md  deep-dive-08-code-sandbox-comparison.md  deep-dive-09-agent-observability.md  deep-dive-10-openai-sdk-vs-langgraph.md
notes/week-03/: context-engineering.md  deep-dive-11-inverted-index-lucene.md  rag-architecture.md  (+16 more)
projects/01-hello-agent/: agent_api.py  agent_skeleton.py  agent_with_feedback.py  chat_api_basics.py  evaluator.py  hello_agent_complete.py  langgraph_agent.py  main.py  mcp_weather_server.py  pyproject.toml  tool_calling_demo.py
resources/: reading-list.md
(+68 files in other folders)
