[project]
name = "hello-agent"
version = "0.1.0"
description = "第一个 AI Agent：基于 DeepSeek API 的多轮对话命令行 Agent"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.5.0",
]
